[package]
name = "town-links"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.12", features = ["derive"] }
env_logger = "0.9"
image = { version = "0.24", default-features = false, features = ["png"] }
#imgui = "0.8"
#imgui-wgpu = "0.20"
#imgui-winit-support = { version = "0.8", features = ["winit-26"], default-features = false }
log = "0.4"
pollster = "0.2"
wgpu = "0.13"
winit = "0.26"
